<resources>
    <string name="app_name">Hotel Cost Management System</string>
    <string-array name="genderlist">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="rolelist">
        <item>Cashier</item>
        <item>Administrator</item>
    </string-array>
    <string name="title_activity_admin_main_acivity">AdminMainAcivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Admins</string>
    <string name="menu_gallery">Cashiers</string>
    <string name="menu_home1">View Details</string>
    <string name="reg">Registration</string>
    <string name="menu_gallery1">Update Password</string>
    <string name="menu_slideshow">Sales</string>
    <string name="menu_slideshow1">Purchases</string>
    <string name="menu_slideshow2">Net</string>
    <string name="title_activity_cashier_main_acivity">CashierMainAcivity</string>
    <string name="title_activity_cashier_main">CashierMainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cashier_home">CashierHome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>