<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/edit"
            android:title="@string/menu_home1" />
        <item
            android:id="@+id/nav_gallery1"
            android:icon="@drawable/settings"
            android:title="@string/menu_gallery1" />
       <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_slideshow1"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow1" />
        <item
            android:id="@+id/nav_slideshow2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow2" />
    </group>
</menu>